# aoc-2025

./: README.md  pyproject.toml
days/: day01.py  day02.py
inputs/: day01.md  day02.md
