[project]
name = "aoc-25"
version = "0.1.0"
description = "Advent of Code 2025"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.0",
    "numpy",
    "networkx",
    "more-itertools",
    "parse",
    "sympy",
    "z3-solver",
    "matplotlib",
    "scipy",
]

[tool.uv]
dev-dependencies = [
    "ipykernel",
]
